fixtures/frontend/milestone-2/invalid/unsupported-recurrence-target/main.aivi
value step x =>
    x

value broken : Int =
    0
     @|> step
     <|@ step
